--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -397,6 +397,60 @@
 	"item.mmorpg.stat_soul.family.weapon.rare": "\u00A7bCrafted Rare Weapon Soul",
 	"item.mmorpg.stat_soul.family.weapon.uncommon": "\u00A7aCrafted Uncommon Weapon Soul",
 	"item.mmorpg.tp_back": "Pearl of Home",
+	"item.mmorpg.uber.frag_uber1_0": "Withering Fragment",
+	"item.mmorpg.uber.frag_uber1_1": "Withering Fragment",
+	"item.mmorpg.uber.frag_uber1_2": "Withering Fragment",
+	"item.mmorpg.uber.frag_uber2_0": "unamed",
+	"item.mmorpg.uber.frag_uber2_1": "unamed",
+	"item.mmorpg.uber.frag_uber2_2": "unamed",
+	"item.mmorpg.uber.frag_uber3_0": "unamed",
+	"item.mmorpg.uber.frag_uber3_1": "unamed",
+	"item.mmorpg.uber.frag_uber3_2": "unamed",
+	"item.mmorpg.uber.frag_uber4_0": "unamed",
+	"item.mmorpg.uber.frag_uber4_1": "unamed",
+	"item.mmorpg.uber.frag_uber4_2": "unamed",
+	"item.mmorpg.uber.frag_uber5_0": "unamed",
+	"item.mmorpg.uber.frag_uber5_1": "unamed",
+	"item.mmorpg.uber.frag_uber5_2": "unamed",
+	"item.mmorpg.uber.frag_uber6_0": "unamed",
+	"item.mmorpg.uber.frag_uber6_1": "unamed",
+	"item.mmorpg.uber.frag_uber6_2": "unamed",
+	"item.mmorpg.uber.frag_uber7_0": "unamed",
+	"item.mmorpg.uber.frag_uber7_1": "unamed",
+	"item.mmorpg.uber.frag_uber7_2": "unamed",
+	"item.mmorpg.uber.frag_uber8_0": "unamed",
+	"item.mmorpg.uber.frag_uber8_1": "unamed",
+	"item.mmorpg.uber.frag_uber8_2": "unamed",
+	"item.mmorpg.uber.frag_uber9_0": "unamed",
+	"item.mmorpg.uber.frag_uber9_1": "unamed",
+	"item.mmorpg.uber.frag_uber9_2": "unamed",
+	"item.mmorpg.uber.map_uber1_0": "Realm of Atrophy and Decay",
+	"item.mmorpg.uber.map_uber1_1": "Realm of Atrophy and Decay",
+	"item.mmorpg.uber.map_uber1_2": "Realm of Atrophy and Decay",
+	"item.mmorpg.uber.map_uber2_0": "unamed",
+	"item.mmorpg.uber.map_uber2_1": "unamed",
+	"item.mmorpg.uber.map_uber2_2": "unamed",
+	"item.mmorpg.uber.map_uber3_0": "unamed",
+	"item.mmorpg.uber.map_uber3_1": "unamed",
+	"item.mmorpg.uber.map_uber3_2": "unamed",
+	"item.mmorpg.uber.map_uber4_0": "unamed",
+	"item.mmorpg.uber.map_uber4_1": "unamed",
+	"item.mmorpg.uber.map_uber4_2": "unamed",
+	"item.mmorpg.uber.map_uber5_0": "unamed",
+	"item.mmorpg.uber.map_uber5_1": "unamed",
+	"item.mmorpg.uber.map_uber5_2": "unamed",
+	"item.mmorpg.uber.map_uber6_0": "unamed",
+	"item.mmorpg.uber.map_uber6_1": "unamed",
+	"item.mmorpg.uber.map_uber6_2": "unamed",
+	"item.mmorpg.uber.map_uber7_0": "unamed",
+	"item.mmorpg.uber.map_uber7_1": "unamed",
+	"item.mmorpg.uber.map_uber7_2": "unamed",
+	"item.mmorpg.uber.map_uber8_0": "unamed",
+	"item.mmorpg.uber.map_uber8_1": "unamed",
+	"item.mmorpg.uber.map_uber8_2": "unamed",
+	"item.mmorpg.uber.map_uber9_0": "unamed",
+	"item.mmorpg.uber.map_uber9_1": "unamed",
+	"item.mmorpg.uber.map_uber9_2": "unamed",
 
 "_comment": " [CATEGORY]: MISC - NAMES",
 
@@ -769,6 +823,7 @@
 	"mmorpg.tag.spell.arrow": "Arrow",
 	"mmorpg.tag.spell.beast": "Beast",
 	"mmorpg.tag.spell.buff": "Buff",
+	"mmorpg.tag.spell.cast_speed_to_cooldown": "Cast speed to cooldown",
 	"mmorpg.tag.spell.chaining": "Chaining",
 	"mmorpg.tag.spell.chaos": "Chaos",
 	"mmorpg.tag.spell.cold": "Cold",
@@ -851,6 +906,15 @@
 "_comment": " [CATEGORY]: GUI - NAMES",
 
 
+"_comment": " [CATEGORY]: FOODS - NAMES",
+
+	"mmorpg.buff_consumption.meal": "Meal",
+	"mmorpg.buff_consumption.potion": "Potion",
+	"mmorpg.buff_consumption.seafood": "Seafood",
+
+"_comment": " [CATEGORY]: FOODS - NAMES",
+
+
 "_comment": " [CATEGORY]: RUNE WORDS - NAMES",
 
 	"mmorpg.runeword.abyssal_depths": "Abyssal Depths",
@@ -863,13 +927,25 @@
 "_comment": " [CATEGORY]: RUNE WORDS - NAMES",
 
 
-"_comment": " [CATEGORY]: FOODS - NAMES",
+"_comment": " [CATEGORY]: RARITIES - NAMES",
 
-	"mmorpg.buff_consumption.meal": "Meal",
-	"mmorpg.buff_consumption.potion": "Potion",
-	"mmorpg.buff_consumption.seafood": "Seafood",
+	"mmorpg.mob_rarity.common": "Common",
+	"mmorpg.mob_rarity.epic": "Epic",
+	"mmorpg.mob_rarity.legendary": "Legendary",
+	"mmorpg.mob_rarity.mythic": "Mythic",
+	"mmorpg.mob_rarity.rare": "Rare",
+	"mmorpg.mob_rarity.summon": "Summon",
+	"mmorpg.mob_rarity.uncommon": "Uncommon",
+	"mmorpg.rarity.common": "Common",
+	"mmorpg.rarity.epic": "Epic",
+	"mmorpg.rarity.legendary": "Legendary",
+	"mmorpg.rarity.mythic": "Mythic",
+	"mmorpg.rarity.rare": "Rare",
+	"mmorpg.rarity.runeword": "Runed",
+	"mmorpg.rarity.uncommon": "Uncommon",
+	"mmorpg.rarity.unique": "Unique",
 
-"_comment": " [CATEGORY]: FOODS - NAMES",
+"_comment": " [CATEGORY]: RARITIES - NAMES",
 
 
 "_comment": " [CATEGORY]: DUNGEON - NAMES",
@@ -897,27 +973,6 @@
 "_comment": " [CATEGORY]: DUNGEON - NAMES",
 
 
-"_comment": " [CATEGORY]: RARITIES - NAMES",
-
-	"mmorpg.mob_rarity.common": "Common",
-	"mmorpg.mob_rarity.epic": "Epic",
-	"mmorpg.mob_rarity.legendary": "Legendary",
-	"mmorpg.mob_rarity.mythic": "Mythic",
-	"mmorpg.mob_rarity.rare": "Rare",
-	"mmorpg.mob_rarity.summon": "Summon",
-	"mmorpg.mob_rarity.uncommon": "Uncommon",
-	"mmorpg.rarity.common": "Common",
-	"mmorpg.rarity.epic": "Epic",
-	"mmorpg.rarity.legendary": "Legendary",
-	"mmorpg.rarity.mythic": "Mythic",
-	"mmorpg.rarity.rare": "Rare",
-	"mmorpg.rarity.runeword": "Runed",
-	"mmorpg.rarity.uncommon": "Uncommon",
-	"mmorpg.rarity.unique": "Unique",
-
-"_comment": " [CATEGORY]: RARITIES - NAMES",
-
-
 "_comment": " [CATEGORY]: PROPHECY - NAMES",
 
 	"mmorpg.prophecy_start.aura_gem": "Aura Gem Prophecy",
@@ -928,14 +983,6 @@
 	"mmorpg.prophecy_start.support_gem": "Support Gem Prophecy",
 
 "_comment": " [CATEGORY]: PROPHECY - NAMES",
-
-
-"_comment": " [CATEGORY]: LEAGUE - NAMES",
-
-	"mmorpg.league.harvest": "Harvest League",
-	"mmorpg.league.prophecy": "Prophecy League",
-
-"_comment": " [CATEGORY]: LEAGUE - NAMES",
 
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
@@ -977,54 +1024,62 @@
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
-	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
 	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
 	"mmorpg.currency.socket_adder": "Orb of Digging",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
 	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+
+"_comment": " [CATEGORY]: LEAGUE - NAMES",
+
+	"mmorpg.league.harvest": "Harvest League",
+	"mmorpg.league.prophecy": "Prophecy League",
+
+"_comment": " [CATEGORY]: LEAGUE - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -1467,6 +1522,10 @@
 	"mmorpg.stat.burn_resistance": "Burn Resistance",
 	"mmorpg.stat.burn_strength": "Burn Strength",
 	"mmorpg.stat.cast_speed": "Cast Speed",
+	"mmorpg.stat.cast_speed_to_cooldown_cast_time": "Cast speed to cooldown Cast Time",
+	"mmorpg.stat.cast_speed_to_cooldown_cdr": "Cast speed to cooldown Spell Cooldown Reduction",
+	"mmorpg.stat.cast_speed_to_cooldown_spell_dmg": "Cast speed to cooldown Damage",
+	"mmorpg.stat.cast_speed_to_cooldown_spell_dmg_taken": "Cast speed to cooldown Damage Taken",
 	"mmorpg.stat.cd_ticks": "Cooldown Ticks",
 	"mmorpg.stat.cdr": "Cooldown Reduction",
 	"mmorpg.stat.chaining_cast_time": "Chaining Cast Time",
@@ -1902,6 +1961,7 @@
 	"mmorpg.stat.plus_lvl_arrow_spells": "To Arrow Spells",
 	"mmorpg.stat.plus_lvl_beast_spells": "To Beast Spells",
 	"mmorpg.stat.plus_lvl_buff_spells": "To Buff Spells",
+	"mmorpg.stat.plus_lvl_cast_speed_to_cooldown_spells": "To Cast speed to cooldown Spells",
 	"mmorpg.stat.plus_lvl_chaining_spells": "To Chaining Spells",
 	"mmorpg.stat.plus_lvl_chaos_spells": "To Chaos Spells",
 	"mmorpg.stat.plus_lvl_cold_spells": "To Cold Spells",
@@ -2224,7 +2284,7 @@
 	"mmorpg.chat.dev_tools_enabled_contact_the_author": "Devs tools enabled, if you see this please contact the author of Mine and Slash [robertx22], he forgot to disable them!",
 	"mmorpg.chat.enchant_upgrade_rarity": "Enchants must be applied consecutively. A common enchant has to come before an uncommon enchant may be applied.",
 	"mmorpg.chat.enemy_too_close": "You can't teleport when enemies are nearby.",
-	"mmorpg.chat.failed_to_award_talents": "Failed to give more talent points, you have reached the cap.",
+	"mmorpg.chat.failed_to_award_talents": "Failed to give more talent points, you have reached the cap. The maximum allowed bonus talent points is controlled by the config file.",
 	"mmorpg.chat.favor_death_msg": "Your Favor has fallen by %1$s Points.",
 	"mmorpg.chat.favor_down": "As a result of death, your Favor has fallen to %1$s, Remember this disgrace.",
 	"mmorpg.chat.favor_up": "As a result of your achievements, your Favor has risen to %1$s!",
@@ -2398,6 +2458,9 @@
 	"mmorpg.stat_desc.burn_resistance": "Protects against the ailment, if it's 100%, it acts as immunity.",
 	"mmorpg.stat_desc.burn_strength": "Increases the effect, if it's a DOT, increases damage, if it's not, decreases the amount of damage needed to fully apply it.",
 	"mmorpg.stat_desc.cast_speed": "Affects amount of time needed to cast spells. If the spell is instant, it reduces the cooldown. Only works on spells tagged as Magic",
+	"mmorpg.stat_desc.cast_speed_to_cooldown_cast_time": "Reduces cast time of spells with this tag",
+	"mmorpg.stat_desc.cast_speed_to_cooldown_cdr": "Reduces spell cooldown of spells with the tag.",
+	"mmorpg.stat_desc.cast_speed_to_cooldown_spell_dmg": "Increases damage of spells with this tag. Totem Damage increases dmg of totems, etc.",
 	"mmorpg.stat_desc.cd_ticks": "Reduces spell cooldown by x ticks",
 	"mmorpg.stat_desc.cdr": "Reduces spell cooldown.",
 	"mmorpg.stat_desc.chaining_cast_time": "Reduces cast time of spells with this tag",
